此网站主要是收集我的户外游记、摄影摄像作品, 以及编程笔记等内容

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: index-full
-description: the good site of life
+description: 此博客主要是收集我的户外游记、摄影摄像作品, 以及编程笔记等内容
 ---
 {% for post in paginator.posts %}
     {% include article_index.html %}
